logs/exceptions-2025-06-27.log
2025-06-27 13:18:19 [ERROR] uncaughtException: Unexpected token '.'
/home/app/server/routes/auth.js:104
    const token = req.headers.authorization?.replace('Bearer ', '');
                                            ^

SyntaxError: Unexpected token '.'
    at wrapSafe (internal/modules/cjs/loader.js:915:16)
    at Module._compile (internal/modules/cjs/loader.js:963:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:85:18)
    at Object.<anonymous> (/home/app/server/index.js:12:20)
    at Module._compile (internal/modules/cjs/loader.js:999:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10) {"error":{},"stack":"/home/app/server/routes/auth.js:104\n    const token = req.headers.authorization?.replace('Bearer ', '');\n                                            ^\n\nSyntaxError: Unexpected token '.'\n    at wrapSafe (internal/modules/cjs/loader.js:915:16)\n    at Module._compile (internal/modules/cjs/loader.js:963:27)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)\n    at Module.load (internal/modules/cjs/loader.js:863:32)\n    at Function.Module._load (internal/modules/cjs/loader.js:708:14)\n    at Module.require (internal/modules/cjs/loader.js:887:19)\n    at require (internal/modules/cjs/helpers.js:85:18)\n    at Object.<anonymous> (/home/app/server/index.js:12:20)\n    at Module._compile (internal/modules/cjs/loader.js:999:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)","exception":true,"date":"Fri Jun 27 2025 13:18:19 GMT+0000 (Coordinated Universal Time)","process":{"pid":143131,"uid":0,"gid":0,"cwd":"/home/app/server","execPath":"/usr/bin/node","version":"v12.22.9","argv":["/usr/bin/node","/home/app/server/index.js"],"memoryUsage":{"rss":70135808,"heapTotal":32755712,"heapUsed":18593136,"external":1711418,"arrayBuffers":350263}},"os":{"loadavg":[0.08,0.23,0.17],"uptime":1256916.96},"trace":[{"column":16,"file":"internal/modules/cjs/loader.js","function":"wrapSafe","line":915,"method":null,"native":false},{"column":27,"file":"internal/modules/cjs/loader.js","function":"Module._compile","line":963,"method":"_compile","native":false},{"column":10,"file":"internal/modules/cjs/loader.js","function":"Module._extensions..js","line":1027,"method":".js","native":false},{"column":32,"file":"internal/modules/cjs/loader.js","function":"Module.load","line":863,"method":"load","native":false},{"column":14,"file":"internal/modules/cjs/loader.js","function":"Module._load","line":708,"method":"_load","native":false},{"column":19,"file":"internal/modules/cjs/loader.js","function":"Module.require","line":887,"method":"require","native":false},{"column":18,"file":"internal/modules/cjs/helpers.js","function":"require","line":85,"method":null,"native":false},{"column":20,"file":"/home/app/server/index.js","function":null,"line":12,"method":null,"native":false},{"column":30,"file":"internal/modules/cjs/loader.js","function":"Module._compile","line":999,"method":"_compile","native":false},{"column":10,"file":"internal/modules/cjs/loader.js","function":"Module._extensions..js","line":1027,"method":".js","native":false}]}
